# ui.info_ui

./: .gitignore  CMakeLists.txt  README.md  flash.bash  sdkconfig  sdkconfig.old
components/info_ui/: CMakeLists.txt  idf_component.yml  info_ui.c  info_ui.cpp  info_ui.h
components/info_ui/app/clock/Icon/: icon_clock.c
components/info_ui/app/clock/Inc/: app_clock.h
components/info_ui/app/clock/Src/: app_clock.cpp
components/info_ui/app/computer_controller/Icon/: icon_computer_controller.c  picture_exit.c  picture_p10.c  picture_p100.c  picture_p20.c  picture_p30.c  picture_p40.c  picture_p50.c  picture_p60.c  picture_p70.c  picture_p80.c  picture_p90.c  picture_wifi_find.c
components/info_ui/app/computer_controller/Inc/: app_computer_controller.h  app_computer_controller_remote_control.h
components/info_ui/app/computer_controller/Src/: app_computer_controller.cpp
components/info_ui/app/imu/Icon/: icon_imu.c
components/info_ui/app/imu/Inc/: app_imu.h
components/info_ui/app/imu/Src/: app_imu.cpp
components/info_ui/app/music/Icon/: icon_voice.c
components/info_ui/app/music/Inc/: app_music.h
components/info_ui/app/music/Src/: app_music.cpp
components/info_ui/app/sys_info/Icon/: fish.c  icon_chat.c  icon_chat_left.c  icon_chat_mid.c  icon_chat_right.c  icon_cpu.c  icon_information.c  icon_jayden_lee.c  icon_message.c  icon_message_left.c  icon_message_mid.c  icon_message_right.c  icon_message_rigth.c  icon_music.c  icon_voice.c  icon_voice_left.c  icon_voice_mid.c  icon_voice_right.c  icon_windows.c  icon_windows_left.c  icon_windows_mid.c  icon_windows_right.c
components/info_ui/app/sys_info/Inc/: app_sys_info.h
components/info_ui/app/sys_info/Src/: app_sys_info.cpp
components/info_ui/app/temperature/Icon/: icon_temperature.c
components/info_ui/app/temperature/Inc/: app_temperature.h
components/info_ui/app/temperature/Src/: app_temperature.cpp
components/info_ui/config/Inc/: info_ui_config.h
components/info_ui/config/Src/: info_ui_config.cpp
components/info_ui/ui/Inc/: info_ui_app_base.h  info_ui_app_registry.h  info_ui_camera.h  info_ui_item.h  info_ui_remote_connect.h  info_ui_selector.h
components/info_ui/ui/Src/: info_ui_app_base.cpp  info_ui_app_registry.cpp  info_ui_camera.cpp  info_ui_launcher.cpp  info_ui_remote_connect.cpp  info_ui_remote_connect_tcp.cpp  info_ui_remote_connect_wifi.cpp
main/: CMakeLists.txt  InfoUI.c  InfoUI.cpp
